--- a/requirements.txt
+++ b/requirements.txt
@@ -53,5 +53,6 @@ tzwhere==3.0.3
 virtualenv==16.0.0
 wcwidth==0.1.7
 webencodings==0.5.1
+wheel==0.33.6
 widgetsnbextension==3.4.2
 zope.interface==4.6.0
