--- a/Docker/Dockerfile.template
+++ b/Docker/Dockerfile.template
@@ -1,7 +1,7 @@
-FROM openjdk:8-jre-slim
+FROM openjdk:11-jre-slim
 
-ARG BUILD_DATE
-ARG SPARK_VERSION=2.4.2
+ARG BUILD_DATE=<DATE>
+ARG SPARK_VERSION=2.4.3
 ARG HABITUS_VERSION=<VER>
 
 MAINTAINER Emiliano Molinaro <emil.molinaro@gmail.com>
@@ -19,6 +19,7 @@ ENV PATH="/opt/miniconda3/bin:${PATH}"
 ENV PYSPARK_PYTHON="/opt/miniconda3/bin/python"
 
 RUN apt-get update && \
+    apt-get install -y build-essential && \
     apt-get install -y curl bzip2 --no-install-recommends && \
     apt-get install -y libblas-dev libatlas-base-dev && \
     curl -s --url "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" --output /tmp/miniconda.sh && \
@@ -29,7 +30,6 @@ RUN apt-get update && \
     conda update conda -y --force && \
     conda clean -tipsy && \
     echo "PATH=/opt/miniconda3/bin:\${PATH}" > /etc/profile.d/miniconda.sh && \
-    pip install --upgrade pip && \
     pip install --no-cache pyspark==${SPARK_VERSION} && \
     SPARK_HOME=$(python /opt/miniconda3/bin/find_spark_home.py) && \
     echo "export SPARK_HOME=$(python /opt/miniconda3/bin/find_spark_home.py)" > /etc/profile.d/spark.sh && \
@@ -44,13 +44,14 @@ RUN apt-get update && \
 
 WORKDIR /work
 
-COPY requirements.txt requirements.txt
-COPY habitus-${HABITUS_VERSION}-py3-none-any.whl habitus-${HABITUS_VERSION}-py3-none-any.whl
+COPY environment.yml environment.yml
+COPY wheels/habitus-${HABITUS_VERSION}-py3-none-any.whl habitus-${HABITUS_VERSION}-py3-none-any.whl
 
-RUN pip install -r requirements.txt && \
-    $PYSPARK_PYTHON -m pip install habitus-${HABITUS_VERSION}-py3-none-any.whl && \
-    rm *.txt *.whl
+RUN conda env update -n base --file environment.yml && \
+    pip install habitus-${HABITUS_VERSION}-py3-none-any.whl && \
+    conda clean -tipsy && \
+    rm *.yml *.whl
 
-#ENTRYPOINT ["spark-submit"]
-#ENTRYPOINT ["habitus"]
-#CMD ["--help"]
+# ENTRYPOINT ["spark-submit"]
+# ENTRYPOINT ["habitus"]
+# CMD ["--help"]
