--- a/Docker/Dockerfile.template
+++ b/Docker/Dockerfile.template
@@ -1,7 +1,6 @@
-FROM openjdk:11-jre-slim
+FROM openjdk:8-jdk-slim
 
 ARG BUILD_DATE=<DATE>
-ARG SPARK_VERSION=2.4.3
 ARG HABITUS_VERSION=<VER>
 
 MAINTAINER Emiliano Molinaro <emil.molinaro@gmail.com>
@@ -15,11 +14,11 @@ written in Python and integrated with Apache Spark for cluster-computing.\
 The program detects personal activity patterns of individual participants wearing\
 a GPS data logger and a physical activity monitor."
 
+ARG SPARK_VERSION=2.4.2
 ENV PATH="/opt/miniconda3/bin:${PATH}"
 ENV PYSPARK_PYTHON="/opt/miniconda3/bin/python"
 
 RUN apt-get update && \
-    apt-get install -y build-essential && \
     apt-get install -y curl bzip2 --no-install-recommends && \
     apt-get install -y libblas-dev libatlas-base-dev && \
     curl -s --url "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" --output /tmp/miniconda.sh && \
@@ -30,7 +29,8 @@ RUN apt-get update && \
     conda update conda -y --force && \
     conda clean -tipsy && \
     echo "PATH=/opt/miniconda3/bin:\${PATH}" > /etc/profile.d/miniconda.sh && \
-    pip install --no-cache pyspark==${SPARK_VERSION} && \
+    python -m pip install --no-cache --upgrade pip && \
+    python -m pip install --no-cache pyspark==${SPARK_VERSION} && \
     SPARK_HOME=$(python /opt/miniconda3/bin/find_spark_home.py) && \
     echo "export SPARK_HOME=$(python /opt/miniconda3/bin/find_spark_home.py)" > /etc/profile.d/spark.sh && \
     curl -s --url "http://central.maven.org/maven2/com/amazonaws/aws-java-sdk/1.7.4/aws-java-sdk-1.7.4.jar" --output $SPARK_HOME/jars/aws-java-sdk-1.7.4.jar && \
@@ -48,7 +48,6 @@ COPY environment.yml environment.yml
 COPY wheels/habitus-${HABITUS_VERSION}-py3-none-any.whl habitus-${HABITUS_VERSION}-py3-none-any.whl
 
 RUN conda env update -n base --file environment.yml && \
-    pip install habitus-${HABITUS_VERSION}-py3-none-any.whl && \
     conda clean -tipsy && \
     rm *.yml *.whl
 
