update Dockerfile for current version

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,13 +1,12 @@
 FROM openjdk:8-jdk-slim
 
 ARG BUILD_DATE=07.12.2019
-ARG HABITUS_VERSION=1.9.3
 
 MAINTAINER Emiliano Molinaro <emil.molinaro@gmail.com>
 
-LABEL org.label-schema.name="HABITUS v$HABITUS_VERSION" \
+LABEL org.label-schema.name="HABITUS v1.9.3" \
       org.label-schema.build-date=$BUILD_DATE \
-      org.label-schema.version=$HABITUS_VERSION \
+      org.label-schema.version=1.9.3 \
       authors="Emiliano Molinaro" \
       description="HABITUS is an implementation of the Personal Activity and Location Measurement System (PALMS),\
 written in Python and integrated with Apache Spark for cluster-computing.\
@@ -45,11 +44,12 @@ RUN apt-get update && \
 WORKDIR /work
 
 COPY environment.yml environment.yml
-COPY wheels/habitus-${HABITUS_VERSION}-py3-none-any.whl habitus-${HABITUS_VERSION}-py3-none-any.whl
+COPY wheels/habitus-1.9.3-py3-none-any.whl habitus-1.9.3-py3-none-any.whl
 
-RUN conda env update -n base --file environment.yml && \
+RUN sed -i -e "s/x.y.z/1.9.3/g" environment.yml && \
+    conda env update -n base --file environment.yml && \
     conda clean -tipsy && \
-    rm *.yml *.whl
+    rm *.yml* *.whl
 
 # ENTRYPOINT ["spark-submit"]
 # ENTRYPOINT ["habitus"]
