--- a/Docker/environment.yml
+++ b/Docker/environment.yml
@@ -13,4 +13,4 @@ dependencies:
     - datefinder==0.7.0
     - DateTime==4.3
     - timezonefinder==5.2.0
-    - habitus-x.y.z-py3-none-any.whl
+    - palmspy-x.y.z-py3-none-any.whl
