--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ py4j==0.10.7
 Pygments==2.3.1
 pyrsistent==0.14.11
 pyspark==2.4.2
+pytest==6.1.2
 python-dateutil==2.8.0
 pytz==2019.1
 pyzmq==18.0.1
