--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
-*.pyc
-data/
 .idea
 .ipynb_checkpoints/
-build/
-dist/
-checkpoints/
-PALMSpy_output/
+.pytest_cache
 *.egg-info/
+*.pyc
+build/
+checkpoints/
+dist/
+PALMSpy_output/
